// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateMocks components mocks class component 1`] = `
"import React from 'react'
export const SomeClassComponent = props => {
  return React.createElement(\\"SomeClassComponent\\", props);
};"
`;

exports[`generateMocks components mocks functional components 1`] = `
"import React from 'react'
const someStuff;
export const SomeComponent = props => {
  return React.createElement(\\"SomeComponent\\", props);
};"
`;

exports[`generateMocks components mocks functional components of different sort 1`] = `
"import React from 'react'
export const same = 'the same procedure as every year';
export const shortComponent = props => React.createElement(\\"shortComponent\\", props);
export const parans = props => React.createElement(\\"parans\\", props);
export const braced = props => {
  return React.createElement(\\"braced\\", props);
};
export const someFunction = props => jest.fn(props);"
`;

exports[`generateMocks components mocks functions 1`] = `
"import React from 'react'
export function fn1(args) {
  return jest.fn(args);
}
export function FnComponent(props) {
  return React.createElement(\\"FnComponent\\", props);
}"
`;

exports[`generateMocks components mocks non component functions with jest.fn 1`] = `
"import React from 'react'
export const function1 = args => {
  return jest.fn(args);
};
export const function2 = args => jest.fn(args);
export const function3 = args => jest.fn(args);"
`;

exports[`generateMocks components removes comments 1`] = `
"import React from 'react'
export const function2 = args => jest.fn(args);"
`;

exports[`generateMocks components removes non exported components 1`] = `
"import React from 'react'
export const externalComponent = props => React.createElement(\\"externalComponent\\", props);"
`;

exports[`generateMocks components removes typescript 1`] = `
"import React from 'react'
export const parans = props => React.createElement(\\"parans\\", props);"
`;
